--- a/_posts/lucene/index/2021-03-18-lucene系列(13)索引格式之nvd文件.md
+++ b/_posts/lucene/index/2021-03-18-lucene系列(13)索引格式之nvd文件.md
@@ -15,7 +15,7 @@ tags:
 
 nvm 与 nvd 文件配合存储了索引中的标准化相关信息。其中 nvd 存储了真实的数据，比如当前 field 有值的所有 docId，以及他们的标准化值。
 
-## .pay 文件整体结构
+## .nvd 文件整体结构
 
 ![2021-03-18-21-52-19](http://img.couplecoders.tech/2021-03-18-21-52-19.png)
 
